# yt-metadata-downloader

./: .gitignore  .pylintrc  README.md  README_RU.md  auth.py  main.py  pyproject.toml  requirements.txt  type_aliases.py  urlparse.py  utils.py  ytmd.bat  ytmd.py
data_handlers/: data_handler.py
kinds/: kind.py  playlist.py  video.py
properties/: data_getter.py  resource_id_getter.py
src/: auth.py  config.py  error_handler.py  http_client.py  main.py  packager.py  query_maker.py  requirements.txt  resource_id.py  url.py  utils.py
src/kinds/: kind.py  playlist.py  video.py
src/links/: __init__.py  id_extractor.py  parser.py
src/query_makers/: __init__.py  base.py  channel.py  playlist.py  playlist_items.py  resource.py  video.py
src/resource_ids/: channel_custom.py  channel_handle.py  channel_id.py  playlist_id.py  resource_id.py  video_id.py
tests/: conftest.py  test_id_extractor.py  test_links_parser.py
