[project]
name = "yt-metadata-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "asttokens==2.4.1",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "executing==2.1.0",
    "furl==2.1.4",
    "httplib2==0.22.0",
    "icecream==2.1.3",
    "idna==3.10",
    "numpy==2.3.2",
    "orderedmultidict==1.0.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "pefile==2023.2.7",
    "proto-plus==1.25.0",
    "protobuf==5.28.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pygments==2.18.0",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "rsa==4.9",
    "setuptools==80.9.0",
    "six==1.16.0",
    "toml==0.10.2",
    "toolz==1.0.0",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
]
